--- a/styles.css
+++ b/styles.css
@@ -3,37 +3,41 @@
 }
 body {
   color: #fff;
-  font-family: "Operator Mono";
+  font-family: "Dank Mono";
   text-align: center;
 }
 #content {
   display: grid;
-  /* grid-template-columns: 43.3% 13.3% 43.3%; */
-  /* Using Percentages */
-  /* grid-template-columns: 1fr 2fr 3fr; */
-  /* Using Fractions */
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(4, minmax(200px, auto));
-  /* Using Repeats */
-  /* grid-auto-rows: minmax(200px, auto); */
-  /* Not Always Needed */
-
-  /* Gaps */
-  /* grid-column-gap: 10px;
-  grid-row-gap: 20px; */
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: minmax(150px, auto);
   grid-gap: 10px;
-
-  /* max-width: 960px; */
+  max-width: 960px;
+  /* align-items: start;
+  justify-items: start; */
+  /* Usefull Shit */
   margin: 0 auto;
 }
 #content div {
   background: royalblue;
   padding: 30px;
 }
-
-.one {
-  grid-column: 1/3;
+/* .nested {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px;
+  grid-column: span 2;
+} */
+.nested p {
+  border: 1px solid #fff;
+  padding: 20px;
+  margin: 0;
 }
+.one {
+  /* grid-column: 1/3; */
+  justify-self: center;
+  align-self: center;
+}
+/*
 .two {
   grid-column: 3/7;
 }
@@ -51,4 +55,4 @@ body {
 .six {
   grid-column: 1/3;
   grid-row: 4;
-}
+} */
