--- a/styles.css
+++ b/styles.css
@@ -1,58 +1,63 @@
-#content div:nth-child(even) {
-  background: #777;
-}
 body {
   color: #fff;
-  font-family: "Dank Mono";
+  font-family: "Monaco";
   text-align: center;
 }
 #content {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: minmax(150px, auto);
+  grid-template-columns: repeat(12, 1fr);
+  grid-auto-rows: minmax(100px, auto);
   grid-gap: 10px;
   max-width: 960px;
-  /* align-items: start;
-  justify-items: start; */
-  /* Usefull Shit */
+  position: relative;
   margin: 0 auto;
 }
-#content div {
-  background: royalblue;
+#content > * {
+  background: #3bbced;
   padding: 30px;
 }
-/* .nested {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 10px;
-  grid-column: span 2;
-} */
-.nested p {
-  border: 1px solid #fff;
-  padding: 20px;
-  margin: 0;
+
+header {
+  grid-column: 1/13;
 }
-.one {
-  /* grid-column: 1/3; */
-  justify-self: center;
-  align-self: center;
+main {
+  grid-column: 4/13;
+  grid-row: 2/4;
 }
-/*
-.two {
-  grid-column: 3/7;
-}
-.three {
+aside {
   grid-column: 1/4;
-  grid-row: 2/4;
+  grid-row: 2;
 }
-.four {
-  grid-column: 4/7;
-  grid-row: 2/4;
+section {
+  grid-column: 1/13;
+  grid-row: 4/6;
 }
-.five {
-  grid-column: 3/7;
+nav {
+  grid-column: 1/4;
 }
-.six {
-  grid-column: 1/3;
-  grid-row: 4;
-} */
+footer {
+  grid-column: 1/13;
+}
+
+#grid {
+  display: grid;
+  position: absolute;
+  top: 0;
+  left: 0;
+  grid-template-columns: repeat(12, 1fr);
+  grid-auto-rows: minmax(100%, auto);
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  padding: 0;
+  display: none;
+}
+input:checked + #content #grid {
+  display: grid;
+}
+#grid p {
+  border: 1px solid;
+  background: black;
+  margin: 0;
+  opacity: 0.2;
+}
