--- a/styles.css
+++ b/styles.css
@@ -4,20 +4,23 @@ body {
   text-align: center;
 }
 #content {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-auto-rows: minmax(100px, auto);
+  grid-template-columns: repeat(6, 1fr);
+  grid-auto-rows: minmax(150px, auto);
   grid-gap: 10px;
+  display: grid;
   max-width: 960px;
-  position: relative;
   margin: 0 auto;
 }
-#content > * {
-  background: #3bbced;
+#content div {
+  background: #333;
   padding: 30px;
 }
+/* #content > * {
+  background: #3bbced;
+  padding: 30px;
+} */
 
-header {
+/* header {
   grid-column: 1/13;
 }
 main {
@@ -37,9 +40,9 @@ nav {
 }
 footer {
   grid-column: 1/13;
-}
+} */
 
-#grid {
+/* #grid {
   display: grid;
   position: absolute;
   top: 0;
@@ -60,4 +63,25 @@ input:checked + #content #grid {
   background: black;
   margin: 0;
   opacity: 0.2;
+} */
+
+.one {
+  grid-column: 1/3;
+  grid-row: 1/5;
+}
+.two {
+  grid-column: 3/7;
+  grid-row: 1/3;
+}
+.three {
+  grid-column: 3/5;
+  grid-row: 3/5;
+}
+.four {
+  grid-column: 5/7;
+  grid-row: 3/7;
+}
+.five {
+  grid-column: 1/5;
+  grid-row: 5/7;
 }
