--- a/styles.css
+++ b/styles.css
@@ -4,15 +4,22 @@ body {
   text-align: center;
 }
 #content {
-  grid-template-columns: repeat(6, 1fr);
-  grid-auto-rows: minmax(150px, auto);
-  grid-gap: 10px;
   display: grid;
-  max-width: 960px;
+  /* max-width: 960px; */
   margin: 0 auto;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+  grid-template-areas:
+    "header header header header"
+    "aside aside main main"
+    "nav nav main main"
+    "section section section section"
+    "section section section section"
+    "footer footer footer footer";
 }
-#content div {
-  background: #333;
+#content > * {
+  background: royalblue;
   padding: 30px;
 }
 /* #content > * {
@@ -65,23 +72,26 @@ input:checked + #content #grid {
   opacity: 0.2;
 } */
 
-.one {
-  grid-column: 1/3;
-  grid-row: 1/5;
+header {
+  grid-area: header;
 }
-.two {
-  grid-column: 3/7;
-  grid-row: 1/3;
+
+main {
+  grid-area: main;
 }
-.three {
-  grid-column: 3/5;
-  grid-row: 3/5;
+
+section {
+  grid-area: section;
 }
-.four {
-  grid-column: 5/7;
-  grid-row: 3/7;
+
+aside {
+  grid-area: aside;
 }
-.five {
-  grid-column: 1/5;
-  grid-row: 5/7;
+
+nav {
+  grid-area: nav;
+}
+
+footer {
+  grid-area: footer;
 }
